Set the item views. The app now can retrive menuitems from the database and allocate them to the necessary fragment

--- a/app/src/main/res/layout/fragment_cus_home.xml
+++ b/app/src/main/res/layout/fragment_cus_home.xml
@@ -54,24 +54,47 @@
 
     <TextView
         android:id="@+id/txtUserName"
-        android:layout_width="133dp"
-        android:layout_height="26dp"
-        android:layout_marginTop="92dp"
+        android:layout_width="74dp"
+        android:layout_height="22dp"
+        android:layout_marginTop="96dp"
         android:fontFamily="@font/architects_daughter"
         android:textColor="#432817"
         android:textSize="20sp"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.435"
+        app:layout_constraintHorizontal_bias="0.359"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
+
+    <LinearLayout
+        android:id="@+id/linearLayout"
+        android:layout_width="85dp"
+        android:layout_height="0dp"
+        android:background="@drawable/left_toolbar"
+        android:orientation="vertical"
+        android:paddingTop="15dp"
+        app:layout_constraintBottom_toBottomOf="@+id/fragmentContainer"
+        app:layout_constraintEnd_toStartOf="@+id/textView4"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="@+id/fragmentContainer"
+        app:layout_constraintVertical_bias="0.9">
+
+
+        <ListView
+            android:id="@+id/menuListView"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:background="@drawable/left_toolbar" />
+    </LinearLayout>
 
     <FrameLayout
         android:id="@+id/fragmentContainer"
         android:layout_width="0dp"
         android:layout_height="0dp"
         android:background="#f55555"
-        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toEndOf="@+id/linearLayout"
         app:layout_constraintTop_toBottomOf="@+id/txtSearch" />
 
 
