Set up the cart. cart working as expected.
To Do// remove btn, Totals

--- a/app/src/main/res/layout/fragment_order.xml
+++ b/app/src/main/res/layout/fragment_order.xml
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="#dec3a9">
@@ -17,10 +16,10 @@
             android:padding="20dp">
 
             <TextView
-                android:id="@+id/txtBasket"
+                android:id="@+id/txtOrders"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Basket"
+                android:text="Orders"
                 android:layout_gravity="center"
                 android:textSize="30sp"
                 android:layout_marginTop="40dp"
@@ -30,10 +29,10 @@
                 android:layout_centerHorizontal="true" />
 
             <TextView
-                android:id="@+id/txtMyOrder"
+                android:id="@+id/txtMyOrders"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="My Order"
+                android:text="My Orders"
                 android:textSize="24sp"
                 android:paddingStart="10dp"
                 android:textColor="#4C3E2A"
@@ -41,15 +40,9 @@
                 android:layout_centerHorizontal="true"
                 android:paddingTop="10dp" />
 
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="You have  xx items in the basket"
-                android:layout_margin="10dp"
-                android:textColor="@color/black"
-                />
+
             <androidx.recyclerview.widget.RecyclerView
-                android:id="@+id/cartRecyclerView"
+                android:id="@+id/ordersRecyclerView"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:padding="16dp" />
@@ -58,43 +51,5 @@
 
         </LinearLayout>
     </ScrollView>
-
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
-        android:background="@color/ic_launcher_background"
-        android:orientation="vertical"
-        android:paddingTop="20dp">
-
-        <TextView
-            android:id="@+id/txtSubtotal"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:paddingBottom="20dp"
-            android:text="Subtotal" />
-
-        <TextView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:paddingBottom="20dp"
-            android:text="Fees" />
-
-        <TextView
-            android:id="@+id/txtTotal"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:paddingBottom="10dp"
-            android:text="Total" />
-
-        <Button
-            android:id="@+id/btnCheckout"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_gravity="end"
-            android:background="@drawable/lowerthird"
-            android:text="Go to Checkout" />
-
-    </LinearLayout>
 
 </RelativeLayout>
