--- a/app/src/main/res/menu/customer_btm_menu.xml
+++ b/app/src/main/res/menu/customer_btm_menu.xml
@@ -6,10 +6,13 @@
     android:title="Home"
     android:icon="@drawable/home"/>
 
+    <item android:id="@+id/cartFragment2"
+        android:title="Cart"
+        android:icon="@drawable/cart"/>
+
     <item android:title="Order"
         android:id="@+id/orderFragment"
         android:icon="@drawable/order"/>
-
 
     <item android:id="@+id/accountFragment"
         android:title="Account"
