--- a/app/src/main/res/layout/fragment_cart.xml
+++ b/app/src/main/res/layout/fragment_cart.xml
@@ -62,7 +62,8 @@
         android:layout_alignParentBottom="true"
         android:background="@color/ic_launcher_background"
         android:orientation="vertical"
-        android:paddingBottom="40dp">
+        android:paddingBottom="40dp"
+        android:gravity="end">
 
         <Button
             android:id="@+id/btnCheckout"
@@ -73,23 +74,31 @@
 
         <TextView
             android:id="@+id/txtSubtotal"
-            android:layout_width="match_parent"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:paddingBottom="20dp"
-            android:text="Subtotal" />
+            android:paddingBottom="10dp"
+            android:paddingTop="10dp"
+            android:paddingEnd="20dp"
+            android:typeface="monospace"
+            android:text="Subtotal: £0.00" />
 
         <TextView
-            android:layout_width="match_parent"
+            android:id="@+id/txtFee"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:paddingBottom="20dp"
-            android:text="Fees" />
+            android:paddingBottom="10dp"
+            android:paddingEnd="20dp"
+            android:typeface="monospace"
+            android:text="Fees: £0.00" />
 
         <TextView
             android:id="@+id/txtTotal"
-            android:layout_width="match_parent"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:paddingBottom="10dp"
-            android:text="Total" />
+            android:paddingBottom="20dp"
+            android:paddingEnd="20dp"
+            android:typeface="monospace"
+            android:text="Total: £0.00" />
 
     </LinearLayout>
 
