--- a/app/src/main/res/menu/admin_btm_menu.xml
+++ b/app/src/main/res/menu/admin_btm_menu.xml
@@ -1,16 +1,24 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
 
+
         <item android:id="@+id/admin_nav_graph"
                 android:icon="@drawable/home"
                 android:title="Home"/>
         <item
-            android:id="@+id/accountFragment"
-            android:title="Account"
-            android:icon="@drawable/acct" />
+            android:id="@+id/cartFragment"
+            android:title="Cart"
+            android:icon="@drawable/cart" />
 
         <item
             android:id="@+id/orderFragment"
             android:title="Order"
             android:icon="@drawable/order" />
+
+        <item
+            android:id="@+id/adminAccountFragment"
+            android:title="Account"
+            android:icon="@drawable/acct" />
+
+
 </menu>
