--- a/app/src/main/res/navigation/admin_nav_graph.xml
+++ b/app/src/main/res/navigation/admin_nav_graph.xml
@@ -6,11 +6,6 @@
     app:startDestination="@id/adminHomeFragment">
 
     <fragment
-        android:id="@+id/accountFragment"
-        android:name="com.example.byteduo.View.AccountFragment"
-        android:label="fragment_account"
-        tools:layout="@layout/fragment_account" />
-    <fragment
         android:id="@+id/orderFragment"
         android:name="com.example.byteduo.View.OrderFragment"
         android:label="fragment_order"
@@ -20,5 +15,13 @@
         android:name="com.example.byteduo.AdminHomeFragment"
         android:label="fragment_admin_home"
         tools:layout="@layout/fragment_admin_home" />
+    <fragment
+        android:id="@+id/cartFragment"
+        android:name="com.example.byteduo.CartFragment"
+        android:label="CartFragment" />
+    <fragment
+        android:id="@+id/adminAccountFragment"
+        android:name="com.example.byteduo.View.AdminAccountFragment"
+        android:label="AdminAccountFragment" />
 
 </navigation>
