--- a/app/src/main/res/layout/fragment_admin_account.xml
+++ b/app/src/main/res/layout/fragment_admin_account.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -15,6 +16,7 @@
         android:layout_alignParentEnd="true"
         android:layout_margin="16dp" />
 
+    <!-- Profile Image -->
     <ImageView
         android:id="@+id/imageView5"
         android:layout_width="186dp"
@@ -25,6 +27,7 @@
         android:paddingBottom="20dp"
         android:src="@drawable/acct" />
 
+    <!-- Admin Name -->
     <TextView
         android:id="@+id/txtAdminName"
         android:layout_width="wrap_content"
@@ -36,6 +39,7 @@
         android:text="Name"
         android:textSize="18sp" />
 
+    <!-- Update Details -->
     <TextView
         android:id="@+id/txtUpdateDetails"
         android:layout_width="wrap_content"
@@ -47,32 +51,95 @@
         android:textColor="@android:color/holo_blue_dark"
         android:textStyle="bold" />
 
+    <!-- Update Section Separator -->
+    <TextView
+        android:id="@+id/UpdateSection"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="------------------------------------ Update Menu Items --------------------------------------"
+        android:textColor="@color/black"
+        android:gravity="center"
+        android:paddingTop="30dp"
+        android:paddingBottom="30dp"
+        android:layout_below="@+id/txtUpdateDetails" />
+
+    <!-- Add Menu Item Button -->
     <Button
         android:id="@+id/btnAddItem"
+        android:layout_width="129dp"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/UpdateSection"
+        android:layout_marginStart="16dp"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="16dp"
+        android:layout_marginBottom="10dp"
+        android:background="@drawable/rounded_btn"
+        android:text="Add Menu Item" />
+
+    <!-- Note -->
+    <TextView
+        android:id="@+id/note"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Add Menu Item"
-        android:layout_below="@id/txtUpdateDetails"
-        android:layout_marginTop="16dp"
-        android:layout_marginStart="16dp" />
-
-    <Button
-        android:id="@+id/btnRemoveItem"
-        android:layout_width="134dp"
-        android:layout_height="wrap_content"
-        android:layout_below="@id/btnAddItem"
+        android:text="Select an item from the spinner below to edit or delete"
+        android:textColor="#8E542F"
+        android:background="@drawable/stroke"
         android:layout_marginStart="16dp"
-        android:layout_marginTop="16dp"
+        android:layout_marginEnd="16dp"
+        android:layout_centerHorizontal="true"
+        android:paddingLeft="5dp"
+        android:paddingEnd="5dp"
+        android:layout_marginRight="5dp"
+        android:textSize="20dp"
+        android:layout_marginTop="20dp"
+        android:gravity="center"
         android:layout_marginBottom="30dp"
-        android:text="Remove Item" />
+        android:layout_below="@+id/btnAddItem" />
 
+    <!-- Spinner -->
     <Spinner
         android:id="@+id/removeSpinner"
         android:layout_width="wrap_content"
         android:layout_height="41dp"
-        android:layout_below="@id/btnRemoveItem"
-        android:background="@drawable/stroke"
-        android:layout_marginStart="20dp"/>
+        android:layout_below="@id/note"
+        android:layout_centerHorizontal="true"
+        android:layout_marginStart="20dp"
+        android:layout_marginEnd="30dp"
+        android:textColor="#FF8E542F"
+        android:background="@drawable/stroke" />
+
+    <!-- Edit and Remove Buttons -->
+    <LinearLayout
+        android:id="@+id/editRemove"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="30dp"
+        android:layout_below="@+id/removeSpinner"
+        android:orientation="horizontal">
+
+        <Button
+            android:id="@+id/btnRemoveItem"
+            android:layout_width="134dp"
+            android:layout_height="wrap_content"
+            android:layout_below="@id/btnAddItem"
+            android:layout_marginStart="16dp"
+            android:layout_marginTop="16dp"
+            android:background="@drawable/rounded_btn"
+            android:layout_marginBottom="30dp"
+            android:text="Remove Item" />
+
+        <Button
+            android:id="@+id/btnEditItem"
+            android:layout_width="134dp"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="16dp"
+            android:layout_marginTop="16dp"
+            android:layout_marginBottom="30dp"
+            android:background="@drawable/rounded_btn"
+            android:text="Edit Item" />
+    </LinearLayout>
+
 
 
 </RelativeLayout>
