--- a/app/src/main/res/navigation/admin_nav_graph.xml
+++ b/app/src/main/res/navigation/admin_nav_graph.xml
@@ -9,7 +9,7 @@
         android:id="@+id/orderFragment"
         android:name="com.example.byteduo.View.OrderFragment"
         android:label="fragment_order"
-        tools:layout="@layout/fragment_order" />
+        tools:layout="@layout/fragment_orders" />
     <fragment
         android:id="@+id/adminHomeFragment"
         android:name="com.example.byteduo.AdminHomeFragment"
