--- a/app/src/main/res/layout/fragment_orders.xml
+++ b/app/src/main/res/layout/fragment_orders.xml
@@ -33,7 +33,7 @@
                 android:id="@+id/txtMyOrders"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="My Orders"
+                android:text="All Orders"
                 android:textSize="24sp"
                 android:paddingStart="10dp"
                 android:textColor="#4C3E2A"
