--- a/app/src/main/res/layout/fragment_admin_account.xml
+++ b/app/src/main/res/layout/fragment_admin_account.xml
@@ -76,6 +76,7 @@
         android:gravity="center"
         android:text="------------------------------------ Update Menu Items --------------------------------------"
         android:textColor="@color/black"
+        android:paddingTop="30dp"
         android:paddingBottom="30dp"
         android:layout_below="@+id/txtChangePassword" />
 
