--- a/app/src/main/res/layout/manage_order_item_layout.xml
+++ b/app/src/main/res/layout/manage_order_item_layout.xml
@@ -53,6 +53,15 @@
             android:textColor="#0E0E0E"
             android:id="@+id/orderPaymentType"/>
 
+        <TextView
+            android:id="@+id/orderTotal"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Total:"
+            android:textSize="18sp"
+            android:layout_marginRight="10dp"
+            android:textColor="@color/black"/>
+
     </LinearLayout>
 
     <LinearLayout
@@ -66,30 +75,21 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Status:"
-            android:textSize="20sp"
+            android:textSize="18sp"
             android:layout_gravity="center"
             android:layout_marginRight="10dp"
             android:textColor="@color/black"/>
 
 
 
-        <ToggleButton
-            android:id="@+id/toggleCollectPreparing"
+
+
+        <Spinner
+            android:id="@+id/threeStateSpinner"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:textOff="Preparing"
-            android:textOn="Collect"
-            android:background="@drawable/rounded_btn"
-            android:layout_marginTop="8dp"/>
-
-        <Button
-            android:id="@+id/completeButton"
-            android:layout_width="134dp"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="8dp"
-            android:layout_marginLeft="20dp"
-            android:background="@drawable/rounded_btn"
-            android:text="Complete Order" />
+            android:entries="@array/order_statuses"
+            android:prompt="@string/order_status_prompt"/>
 
     </LinearLayout>
 
