--- a/app/src/main/res/layout/fragment_manage_orders.xml
+++ b/app/src/main/res/layout/fragment_manage_orders.xml
@@ -3,7 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ManageOrders">
+    tools:context=".View.ManageOrders">
 
     <TextView
         android:id="@+id/allOrders"
